--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Meetry</h1>
+<% if user_signed_in? %>
+  <p>
+    Hello!
+    <%= current_user.uuid %>
+  <p>
+  <%= link_to "Connect Friend!", "#"%><br>
+<% end %>
 
 <%= link_to "Registration", new_user_path %>
