--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,15 @@
   <head>
     <title>Meetry</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport", content="width=device-width,initial-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <!-- TODO: Flashを入れたい? -->
+    <p><%= flash[:error] %></p>
     <%= yield %>
   </body>
 </html>
