--- a/app/views/authenticates/new.html.erb
+++ b/app/views/authenticates/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Send Request for you from <%= @request.friend.uuid%>!</h2>
+<h2>Send Request for you from <%= @request.request_user.uuid%>!</h2>
 <%= form_for(@request, url: authenticate_path(@request)) do |f| %>
 <%= f.hidden_field :request_user_id %>
 <%= f.hidden_field :request_status, value: :accept %>
