Add: Image Uploader

--- a/app/views/finds/show.html.erb
+++ b/app/views/finds/show.html.erb
@@ -1,11 +1,12 @@
 <%= form_tag find_path, :method => 'get' do %> <%#　projects_pathはモデル名で読みかえること %>
+<%= image_tag @pair_image.image, width: "200px" %>
+<p>このひとは誰ですか？</p>
 <p>
   <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Search", :name => nil %>
+  <%= submit_tag "この人です！", :name => nil %>
+
 </p>
 <% end %>
-<% if @user.present?  %>
-
-<h2><%= @user.uuid %></h2>
-
+<% if @user.present? %>
+  <h2><%= @user.uuid %></h2>
 <% end %>
