--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     Hello!
     <%= link_to current_user.uuid, current_user %>
   <p>
-  <%= link_to "Connect Friend!", find_path %><br>
+  <%= link_to "Connect Friend!", new_pair_image_path %><br>
 <% end %>
 
 <%= link_to "Registration", new_user_path %>
