--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,50 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  background-image: url(summer);
+  background-size: cover;
+  font-family: "SF Pro JP", "SF Pro Text", "SF Pro Icons", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Meiryo", "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h1{
+color:#66FFFF;
+text-align: center;
+margin-top: 30px;
+margin-bottom: 0;
+font-size: 5rem;
+font-family: fantasy;
+}
+.first-contact{
+  margin-top: 0;
+  margin-bottom: 3rem;
+  color:#66FFFF;
+  text-align:center;
+  font-size: 20px;
+  padding-bottom: 3rem;
+}
+.registration:link{
+font-size: 1.5rem;
+text-decoration: none;
+}
+.registration:visited{
+  color: violet;
+}
+.registration:hover{
+  color: blue;
+}
+.regist-box{
+  text-align: center;
+}
+a:-webkit-any-link:hover{
+  color: blue;
+}
+a:-webkit-any-link {
+  font-size: 2rem;
+  color: violet;
+text-decoration: none;
+}
+p{
+  font-size: 2rem;
+  color: violet;
+  text-align: center;
+}
