[connect-friend]user informationページを作りました

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <div>
   <%= form_for(@user) do |f| %>
     <%= f.text_field :uuid, placeholder:"YourId" %>
-    <%= f.text_field :email, placeholder:"email" %>
+    <%= f.email_field :email, placeholder:"email" %>
     <%= f.submit %>
   <% end %>
 </div>
