--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,5 @@
 <% @send_requests.each do |s_request|%>
 <p><%= s_request.friend.uuid %> : <%= s_request.request_status %> </p>
 <% end %>
+
+ <%= link_to 'SNSを設定する', new_social_account_path %>
