--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,18 @@
 <p><%= s_request.friend.uuid %> : <%= s_request.request_status %> </p>
 <% end %>
 
-<%= link_to 'SNSを設定する', new_social_account_path %>
+<!-- <%= link_to 'SNSを設定する', new_social_account_path %> -->
+<div>
+  <h2>SNSアカウントを追加してみよう！</h2>
+  <%= form_for(@social_account , data: { remote: true } ) do |f| %>
+    <%= f.select :provider, [["twitter", "twitter"], ["facebook", "facebook"], ["line", "line"], ["instagram", "instagram"]] %>
+    <%= f.text_field :url, placeholder: "url" %>
+    <%= f.submit %>
+  <% end %>
+</div>
 
+<h2>ユーザー情報</h2>
+
+<div id="user-social-profiles">
+  <%= render current_user.social_accounts %>
+</div>
