--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Meetry</h1>
-<p class="first-contact">〜初対面を思い出に〜</p>
+<header>
+  <h1>Meetry</h1>
+  <p class="first-contact">〜初対面を思い出に〜</p>
+</header>
 <% if user_signed_in? %>
   <p class="current">
     Hello!
