--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,32 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body{
-  background-image: url(summer);
-  background-size: cover;
+  margin: 0;
   font-family: "SF Pro JP", "SF Pro Text", "SF Pro Icons", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Meiryo", "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+header{
+  width: 400px;
+  height: 290px;
+  background-image: url(top);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 h1{
-color:#66FFFF;
+color: white;
 text-align: center;
-margin-top: 30px;
-margin-bottom: 0;
+margin-top: -20px;
 font-size: 5rem;
-font-family: fantasy;
+font-family: serif;
 }
 .first-contact{
-  margin-top: 0;
-  margin-bottom: 3rem;
-  color:#66FFFF;
+  margin-top: -80px;
+  margin-bottom: 6rem;
+  color: gray;
   text-align:center;
-  font-size: 20px;
+  font-size: 10px;
   padding-bottom: 3rem;
+  padding-left: 11rem;
+  font-family: serif;
 }
 .registration:link{
 font-size: 1.5rem;
 text-decoration: none;
 }
 .registration:visited{
-  color: violet;
+  color: #66FFFF;
 }
 .registration:hover{
   color: blue;
@@ -40,11 +48,11 @@ a:-webkit-any-link:hover{
 }
 a:-webkit-any-link {
   font-size: 2rem;
-  color: violet;
+  color: #66FFFF;
 text-decoration: none;
 }
 p{
   font-size: 2rem;
-  color: violet;
+  color: #66FFFF;
   text-align: center;
 }
