--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,15 +1,21 @@
+.signup{
+  background-image: url(top);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin-top: 200px;
+}
 .sakusei{
   text-align: center;
 }
 .name-box{
-  margin: 15px;
+  margin: 10px;
   width: 300px;
   height: 20px;
 }
 .mail-box{
   width: 300px;
   height: 20px;
-  margin: 15px;
+  margin: 10px;
 }
 .send{
   margin-left: 17rem;
