--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,16 +7,17 @@ body{
 
 }
 header{
+  background-image: url(top);
+  background-size: contain;
+  background-repeat: no-repeat;
   width: 400px;
   height: 290px;
-  background-image: url(top);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 h1{
 color: white;
 text-align: center;
 margin-top: -20px;
+margin-bottom: 0;
 font-size: 5rem;
 font-family: serif;
 }
@@ -49,7 +50,7 @@ a:-webkit-any-link:hover{
 a:-webkit-any-link {
   font-size: 2rem;
   color: #66FFFF;
-text-decoration: none;
+
 }
 p{
   font-size: 2rem;
