--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <div class="nav">
+        <a href="/" class="logo">meetry</a>
+    </div>
       <%= yield %>
 
     <!-- TODO: Flashを入れたい? -->
