--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <div class="nav">
         <a href="/" class="logo">meetry</a>
     </div>
-      <%= yield %>
+      <div class= "content">
+        <%= yield %>
+      </div>
 
     <!-- TODO: Flashを入れたい? -->
     <p><%= flash[:error] %></p>
